# RestServerCpp

./: CMakeLists.txt  Server.cpp  vs.gitignore
libs/: BuildDependencies.bat
